--- a/client/src/Home/EventCart.css
+++ b/client/src/Home/EventCart.css
@@ -5,6 +5,7 @@
   max-width: 92vw;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 120px;
   box-sizing: border-box;
 }
 
