--- a/client/src/Home/topbar.css
+++ b/client/src/Home/topbar.css
@@ -18,7 +18,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 9999;
+  z-index: 1100;
   box-sizing: border-box;
   overflow-x: hidden;
   font-family: 'Poppins', Arial, Helvetica, sans-serif;
